games overflow fix

--- a/source/sass/blocks/datetime.scss
+++ b/source/sass/blocks/datetime.scss
@@ -53,6 +53,7 @@
   font-size: 24px;
   font-weight: 700;
   line-height: 24px;
+  max-width: 37px;
 
   @media (min-width: $tablet-width) {
     margin-top: 10px;
@@ -70,6 +71,7 @@
   font-size: 12px;
   font-weight: 400;
   line-height: 100%;
+  max-width: 50px;
 
   @media (min-width: $tablet-width) {
     font-size: 14px;
@@ -83,6 +85,7 @@
   font-size: 12px;
   font-weight: 400;
   line-height: 100%;
+  max-width: 40px;
 
   @media (min-width: $tablet-width) {
     font-size: 14px;
@@ -100,6 +103,7 @@
   line-height: 20px;
   position: relative;
   display: block;
+  max-width: 90px;
 
   @media (min-width: $tablet-width) {
     font-size: 18px;
@@ -129,6 +133,7 @@
   margin-top: 2px;
   padding-right: 1px;
   padding-top: 3px;
+  max-width: 82px;
 
   @media (min-width: $tablet-width) {
     margin-top: 1px;
