--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -57,7 +57,7 @@
   line-height: 54px;
   margin: 0;
   text-transform: uppercase;
-  max-width: 190px;
+  max-width: 100px;
 
   @media (min-width: $desktop-width) {
     font-size: 82px;
